--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "pg": "^8.13.3",
-    "prisma": "^6.3.1"
+    "prisma": "^6.3.1",
+    "resend": "^4.1.2"
   }
 }
