--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "cleanup-tokens": "node utils/cleanupTokens.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "nodemon index.js"
   },
