--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.758.0",
     "@prisma/client": "^6.3.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
