socket io, fix uploading to aws s3, reporting

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^3.1.9",
     "pg": "^8.13.3",
     "prisma": "^6.3.1",
-    "resend": "^4.1.2"
+    "resend": "^4.1.2",
+    "socket.io": "^4.8.1"
   }
 }
